--- a/about.yml
+++ b/about.yml
@@ -1,9 +1,9 @@
 name: Tatyana Kozharina
 job: QA Engineer
 level: junior
-email: ilona@hexlet.io
+email: tata.vladimiiirovna@gmail.com
 description: |
 
-skills: # список навыков в виде списка, напишите что-то свое
+skills: 
   - функциональное тестирование
   - написание багрепортов
